[Clang][XTHeadVector] Fix `__riscv_v_elen` and `__riscv_v_elen_fp`

--- a/.github/workflows/ruyisdk-qemu-rvv-tests.yml
+++ b/.github/workflows/ruyisdk-qemu-rvv-tests.yml
@@ -104,7 +104,7 @@ jobs:
           pushd rvv-intrinsic-doc/examples
           TESTS=(
             # rvv_branch.c
-            # rvv_index.c
+            rvv_index.c
             # rvv_matmul.c
             rvv_memcpy.c
             # rvv_reduce.c
